--- a/liveShopping/productRecommend.html
+++ b/liveShopping/productRecommend.html
@@ -27,13 +27,17 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name='apple-itunes-app' content='app-id=966436668'>
     <!-- 适应移动端end -->
-    <title>直播商品</title>
+    <title>设置商品推荐</title>
     <link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
-    <link rel="stylesheet" type="text/css" href="css/productSelect.css">
+    <link rel="stylesheet" type="text/css" href="css/productRecommend.css">
 </head>
 <body>
 <div class="layout">
+    <header>
+        <a href="#" class="return"><</a>
+        <h1>设置商品推荐</h1>
+    </header>
     <nav >
         <ul class="shop-nav">
             <li class="down">添加时间<i data-field="addtimeOrder"></i></li>
@@ -48,10 +52,6 @@
         </div>
     </main>
     <!-- 内容 end -->
-    <footer>
-        <a href="/html/liveShopping/productAddAndDel.html?type=add" class="addProd">添加商品</a>
-        <a href="/html/liveShopping/productAddAndDel.html?type=del" class="allManage">批量管理</a>
-    </footer>
 </div>
 <script id="product-box" type="text/html">
     {{each prodList as prod i}}
@@ -64,9 +64,10 @@
 
             <div class="buyinfo clearfix">
                 <div class="fl">
-                    <div class="price"><b>￥{{prod.promotionPrice}}</b><span>佣金比率：<i>{{prod.price}}</i></span></div>
+                    <div class="price"><b>￥{{prod.promotionPrice}}</b></div>
                     <div class="peopleNum">销量: {{prod.buys}}  库存: {{prod.stocks}}  收藏: {{prod.favorite}} </div>
                 </div>
+                <a href="#" class="fr recommendBtn main-color">推荐</a>
             </div>
         </div>
     </div>
@@ -74,19 +75,12 @@
 </script>
 <script src="js/lib/zepto.min.js"></script>
 <script src="js/lib/fastclick.min.js"></script>
-<script src="js/lib/zepto.cookie.min.js"></script>
 <script src="js/lib/template.js"></script>
-<script src="js/h5toiosapp.js"></script>
 <script src="js/lib/mui.min.js"></script>
 <script>
     $(function () {
         // 点击延迟处理
         FastClick.attach(document.body);
-        //设置cookie
-        var uid = $.fn.cookie("uid");
-        var device = $.fn.cookie("deviceType");
-        $.fn.cookie("uid",uid,{domain:"daxmall.com",path:"/"});
-        $.fn.cookie("deviceType",device,{domain:"daxmall.com",path:"/"});
         var params = {
             addtimeOrder:"desc"
         };
@@ -103,27 +97,24 @@
 //        排序
         $(".shop-nav li").on('click', function() {
             var field = $(this).find("i").data("field");
-            params = {};
             if ($(this).hasClass("up")) {
                 $(this).removeClass("up").addClass('down');
                 params[field] = "desc";
+                getProductList(params);
             } else if ($(this).hasClass("down")) {
                 $(this).removeClass("down").addClass('up');
                 params[field] = "asc";
+                getProductList(params);
             } else {
                 $(".shop-nav li").removeClass("down").removeClass("up");
+                params={};
                 $(this).addClass('down');
                 params[field] = "desc";
+                getProductList(params);
             }
-            getProductList(params);
         });
 //        同步动力店
-        connectWebViewJavascriptBridge(function(bridge) {
-            bridge.registerHandler('synShopProdCallback', function(){
-                synShopProd();
-            });
-        });
-        function synShopProd(){
+        $("#sync").on("click", function () {
             $.ajax({
                 url:"/liveshoppingManage/synShopProd",
                 type: "GET",
@@ -139,16 +130,15 @@
                     console.log(err);
                 }
             })
-        }
+        })
 //        加载
         function getProductList(params,callback){
             $.ajax({
-                url: "/liveshoppingManage/getInLiveshoppingProdList",
+                url: "data/productSelect.json",
                 type: "GET",
                 data: params,
                 dataType: "json",
                 success: function (data) {
-
                     var data = data;
                     console.log(data);
                     var html = template('product-box', data);
@@ -166,19 +156,21 @@
                                     //业务逻辑代码，比如通过ajax从服务器获取新数据；
                                     params.curPageNO=data.curPageNO+1;
                                     $.ajax({
-                                        url: "/liveshoppingManage/getInLiveshoppingProdList",
+                                        url: "data/productSelect.json",
                                         type: "GET",
                                         data: params,
                                         dataType: "json",
                                         success: function (pataData) {
-                                            console.log(pataData);
                                             data.curPageNO=pataData.curPageNO
-                                            mui('#content').pullRefresh().endPullupToRefresh(!pataData.prodList);
+                                            mui('#content').pullRefresh().endPullupToRefresh(pataData=={});
                                             var pataData = pataData;
+                                            console.log(pataData);
                                             var pataHtml = template('product-box', pataData);
-                                            $('.mui-pull-bottom-pocket').before(pataHtml);
+                                            $('#mui-scroll').append(pataHtml);
                                         },
-                                        error: ajaxError(err)
+                                        error: function (err) {
+                                            console.log(err)
+                                        }
                                     })
                                     //注意：
                                     //1、加载完新数据后，必须执行如下代码，true表示没有更多数据了：
@@ -188,13 +180,14 @@
                             }
                         }
                     });
-                    if(callback)callback();
+                    callback();
                 },
-                error: ajaxError(err)
+                error: function (err) {
+                    console.log(err)
+                }
 
             })
         }
-
 
 
     })
