--- a/liveShopping/trainerRecommend.html
+++ b/liveShopping/trainerRecommend.html
@@ -81,55 +81,7 @@
         var params = {
             mallId: getQueryString("mallId")
         }
-        $.ajax({
-            url: "/m_search/liveShoppingProdlist",
-            type: "GET",
-            data: params,
-            dataType: "json",
-            success: function (data) {
-                var data = data;
-                console.log("第一次加载",data);
-                $("header .fl").data("content",data.prodCount);//在css中，伪元素的content是能读取到data属性的。
-                var html = template('product-box', data);
-                $('#mui-scroll').html(html);
-//                下拉更多
-                mui.init({
-                    pullRefresh: {
-                        container: "#content",//待刷新区域标识，querySelector能定位的css选择器均可，比如：id、.class等
-                        up: {
-                            height: 0,//可选.默认50.触发上拉加载拖动距离
-                            auto: false,//可选,默认false.自动上拉加载一次
-                            contentrefresh: "正在加载...",//可选，正在加载状态时，上拉加载控件上显示的标题内容
-                            contentnomore: '没有更多数据了',//可选，请求完毕若没有更多数据时显示的提醒内容；
-                            callback: function () {
-                                //业务逻辑代码，比如通过ajax从服务器获取新数据；
-                                params.curPageNO=data.curPageNO+1;
-                                $.ajax({
-                                    url: "/m_search/liveShoppingProdlist",
-                                    type: "GET",
-                                    data: params,
-                                    dataType: "json",
-                                    success: function (pataData) {
-                                        console.log("分页加载",pataData);
-                                        data.curPageNO=pataData.curPageNO;
-                                        mui('#content').pullRefresh().endPullupToRefresh(!pataData.prodList);
-                                        var pataData = pataData;
-                                        var pataHtml = template('product-box', pataData);
-                                        $('.mui-pull-bottom-pocket').before(pataHtml);
-                                    },
-                                    error: ajaxError(err)
-                                })
-                                //注意：
-                                //1、加载完新数据后，必须执行如下代码，true表示没有更多数据了：
-                                //2、若为ajax请求，则需将如下代码放置在处理完ajax响应数据之后
-
-                            }//必选，刷新函数，根据具体业务来编写，比如通过ajax从服务器获取新数据；
-                        }
-                    }
-                });
-            },
-            error: ajaxError(err)
-        })
+        ajaxSuccess("/m_search/liveShoppingProdlist","GET",params);
     })
 </script>
 </body>
