--- a/liveShopping/test.html
+++ b/liveShopping/test.html
@@ -33,7 +33,7 @@
 //    setCookie("deviceType","2");
     console.log(document.cookie);
     $("#btn").on("click", function () {
-        window.location.href="http://wgy.daxmall.com:8080/html/liveShopping/productShow.html?mallId=264443616"
+        window.location.href="http://wgy.daxmall.com:8080/html/liveShopping/productSelect.html"
     });
 </script>
 </body>
